<resources>
    <string name="app_name">Rurapp</string>
    <string name="user">Usuario</string>
    <string name="btn_iniciarSesion">Iniciar sesión</string>
    <string name="todo">TODO</string>
    <string name="personal">personal</string>
    <string name="fincas">fincas</string>
    <string name="text_fnc">Fincas:</string>
    <string name="actividades">actividades</string>
    <string name="btn_enviar">enviar</string>
    <string name="contraseña">Gmail</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_aceptarEdit">Aceptar</string>
    <string name="btn_cancelarEdit">Cancelar</string>
    <string name="btn_add">Añadir</string>
    <string name="btn_delete">Eliminar</string>
    <string name="inputText_fncDescr">Descripcion...</string>
    <string name="inputText_lat">-Latitud-</string>
    <string name="inputText_long">-Longitud-</string>
    <string name="inputText_fncNom">Nombre de finca</string>
    <string name="Text_fncDescr">Descripcion...</string>
    <string name="clickimage_fnc">Click en imagen para cambiarla</string>
    <string name="image_fnc">Imagen de finca</string>
    <string name="text_latitud">Latitud:</string>
    <string name="text_descripcion">Descripcion</string>
    <string name="text_latValue">-Latitud-</string>
    <string name="text_longitud">Longitud:</string>
    <string name="text_longValue">-Longitud-</string>
    <string name="text_fncNom">Nombre de finca</string>
    <string name="btn_finca">Fincas</string>
    <string name="btn_empl">Empleados</string>
    <string name="btn_act">Actividades</string>
    <string name="btn_tAct">Tipos de actividades</string>
    <string name="text_bienvenido">Bienvenido</string>
    <string name="text_correo">ID@email.com</string>
    <string name="btn_actRel">Actividades Relacionadas</string>
    <string name="text_empl">Empleado:</string>
    <string name="text_emplNom">nombre empleado</string>
    <string name="text_tActNom">Tipo de actividad</string>
    <string name="text_tActDescrValue">Descripcion...</string>
    <string name="inputText_tActDescrValue">Descripcion...</string>
    <string name="text_tActNombre">Nombre del tipo de actividad</string>
    <string name="inputText_tActNombre">Nombre tipo de actividad</string>
    <string name="text_empleado">Empleado</string>
    <string name="text_pNom">Primer Nombre</string>
    <string name="text_segundo">Segundo</string>
    <string name="text_pApell">Primer Apellido</string>
    <string name="inputText_pNom">Pri Nombre</string>
    <string name="inputText_sNom">Seg Nombre</string>
    <string name="inputText_pApell">Pri Apellido</string>
    <string name="inputText_sApell">Seg Apellido</string>
    <string name="text_cedula">Cedula:</string>
    <string name="text_fecha">Fecha:</string>
    <string name="text_salud">Salud:</string>
    <string name="inputText_emplSalud">-Salud-</string>
    <string name="text_celular">Celular:</string>
    <string name="text_celularValue">0000000000</string>
    <string name="text_valorJornal">Valor de jornal:</string>
    <string name="text_valorjornalValue">00000</string>
    <string name="inputText_cedula">0000000000</string>
    <string name="inputText_fecha"> -- / -- / ---- </string>
    <string name="text_actividad">Actividad</string>
    <string name="inputText_actividad">Actividad</string>
    <string name="text_fchAsignacion">Fecha de asignacion:</string>
    <string name="text_fchRevision">Fecha de revision:</string>
    <string name="text_tact">Tipo de actividad:</string>
    <string name="text_cantJrn">Cantidad de jornales:</string>
    <string name="inputText_cantJrnValue">-0-</string>
    <string name="check_box">.</string>
    <string name="estado">Estado</string>
    <string name="text_nombActividad">Nombre Actividad:</string>

</resources>
