<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colordefaultinputtext"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText16"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="131dp"
        android:layout_marginLeft="57dp"
        android:layout_marginRight="131dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/text_valorjornalValue"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText15"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="114dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="114dp"
        android:layout_marginStart="100dp"
        android:text="@string/text_valorJornal"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:ems="10"
        android:hint="@string/inputText_cedula"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:text="@string/text_cedula"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText13" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/inputText_pNom"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:layout_editor_absoluteX="29dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="73dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/inputText_pApell"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText13"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_pApell"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_pNom"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>